hphp/test/quick/function_pointer/bad_syntax.php.expectf
Fatal error: Function pointers must be explicitly specified in %s/test/quick/function_pointer/bad_syntax.php on line 9
